build: migrate exchange-core to Java 21